--- a/src/components/create-todo/index.module.css
+++ b/src/components/create-todo/index.module.css
@@ -13,3 +13,11 @@
     width: 100%;
     border: none;
 }
+
+.createTodoInput:focus {
+    outline: none;
+}
+
+.btn {
+    background-color: brown;
+}
